--- a/evasive.conf
+++ b/evasive.conf
@@ -11,5 +11,6 @@ DOSWhiteList 127.0.0.*
     DOSSiteInterval     10
     # kept lower value for your testing
     DOSBlockingPeriod   10
+    # DOSSystemCommand "su - someuser -c '/sbin/... %s ...'" 
     DOSLogDir           "/var/log/mod_evasive"
 </IfModule>
